# listinfo

./: .gitignore  Cargo.toml  README.md
src/: main.rs  parse_args.rs  terminal.rs
