[package]
name = "listinfo"
version = "1.0.1"
edition = "2021"
authors = ["Reokodoku"]
description = "An app for list some Linux files"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/Reokodoku/listinfo/"
repository = "https://github.com/Reokodoku/listinfo/"

[dependencies]
cli-table = { version = "0.4.7", default-features = false }

[profile.release]
lto = true
strip = true
codegen-units = 1
